# drake

common/schema/test/: stochastic_test.cc
doc/: clion.md  developers.md
drake/common/: CMakeLists.txt  dimensions.cc  dimensions.h
drake/common/test/: CMakeLists.txt  dimensions_test.cc
drake/examples/Sailboat/: README.txt  dynamics.cpp  sailboat.sdf
drake/solvers/: CMakeLists.txt  Constraint.h  MathematicalProgram.cpp  MathematicalProgram.h  Optimization.h  SystemIdentification.cpp  SystemIdentification.h  linear_system_solver.cc  system_identification.cpp  system_identification.h
drake/solvers/test/: CMakeLists.txt  system_identification_test.cpp  testSystemIdentification.cpp
drake/util/: CMakeLists.txt  Polynomial.cpp  Polynomial.h  TrigPoly.cpp  TrigPoly.h
examples/repair_acrobot/: BUILD.bazel  README.md  spong_sim.cc
manipulation/util/: BUILD.bazel  collision_remover.h
manipulation/util/test/: collision_remover_test.cc  collision_remover_test.urdf
multibody/plant/: BUILD.bazel  element_collection.cc  element_collection.h
multibody/plant/test/: element_collection_test.cc  multibody_plant_fixture.h  multibody_plant_introspection_test.cc
multiprocess/: README.md  lcm_over_stream.cc  lcm_over_stream.h  lcm_over_tcp.h
