# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "spong_sim_main_cc",
    srcs = ["spong_sim.cc"],
    deps = [
        "//common:name_value",
        "//common/yaml",
        "//examples/acrobot:acrobot_plant",
        "//examples/acrobot:spong_controller",
        "//systems/analysis:simulator",
        "//systems/framework:diagram_builder",
        "//systems/primitives:signal_logger",
        "@gflags",
        "@yaml_cpp",
    ],
)

add_lint_tests()
